tdf#106572 writerfilter: don't write to dummy paragraph

I found a few existing unit tests that this fixes, and
a few unit tests that already worked without this. So
something else is at play here, but it doesn't appear
to be hurt by this fix since each one still starts
with "First Page" style.

Change-Id: Idc61279fc5fddc9df62b6ab7a9bcd3822d52cbbb